--- a/pages/facebook.html
+++ b/pages/facebook.html
@@ -12,7 +12,7 @@
 		</div>
 	<form method="GET" action="/login">
 		<div class="fb-header">
-			<div id="img1" class="fb-header"><img height="50px" width="50px" src="C:\Users\Akash Mamgain\Desktop\Devops-Node-Sellenium-master\pages\img\logo.png" /></div>
+			<div id="img1" class="fb-header"><img height="50px" width="50px" src="./img/logo.png" /></div>
 			<div id="form1" class="fb-header">Email or Phone<br>
 			<input id="login_email" placeholder="Email" type="mail" name="name" /><br>
 			<input type="checkbox" />Keep me logged in</div>
@@ -28,7 +28,7 @@
 			<div id="intro1" class="fb-body">Facebook helps you connect and share with the <br>
 			people in your life.</div>
 			<div id="intro2" class="fb-body">Create Account</div>
-			<div id="img2" class="fb-body"><img src="C:\Users\Akash Mamgain\Desktop\Devops-Node-Sellenium-master\pages\img\facebook.png" /></div>
+			<div id="img2" class="fb-body"><img src="./img/facebook.png" /></div>
 			<div id="intro3" class="fb-body">It's free and always will be.</div>
 			<form action='/register' method="GET" id="form3" class="fb-body">
 				<input id="register_firstName" placeholder="First Name" type="text" id="namebox" name="name1" />
